--- a/stm32/TorquePoleNet/TorquePoleNet.ioc
+++ b/stm32/TorquePoleNet/TorquePoleNet.ioc
@@ -10,12 +10,15 @@ Mcu.IP0=CRC
 Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=SYS
-Mcu.IP4=USART2
-Mcu.IPNb=5
+Mcu.IP4=TIM2
+Mcu.IP5=USART2
+Mcu.IPNb=6
 Mcu.Name=STM32G431K(6-8-B)Tx
 Mcu.Package=LQFP32
 Mcu.Pin0=PA2
 Mcu.Pin1=PA3
+Mcu.Pin10=VP_STMicroelectronics.X-CUBE-AI_VS_ArtificialOoIntelligenceJjXAaCUBEAaAI_8.1.0
+Mcu.Pin11=VP_STMicroelectronics.X-CUBE-AI_VS_DeviceJjApplication_8.1.0
 Mcu.Pin2=PA13
 Mcu.Pin3=PA14
 Mcu.Pin4=PB3
@@ -23,8 +26,8 @@ Mcu.Pin5=PB8-BOOT0
 Mcu.Pin6=VP_CRC_VS_CRC
 Mcu.Pin7=VP_SYS_VS_Systick
 Mcu.Pin8=VP_SYS_VS_DBSignals
-Mcu.Pin9=VP_STMicroelectronics.X-CUBE-AI_VS_ArtificialOoIntelligenceJjXAaCUBEAaAI_8.1.0
-Mcu.PinsNb=10
+Mcu.Pin9=VP_TIM2_VS_ClockSourceINT
+Mcu.PinsNb=12
 Mcu.ThirdParty0=STMicroelectronics.X-CUBE-AI.8.1.0
 Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
@@ -102,7 +105,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_CRC_Init-CRC-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_CRC_Init-CRC-false-HAL-true,5-MX_X_CUBE_AI_Init-STMicroelectronics.X-CUBE-AI.8.1.0-false-HAL-false,6-MX_X_CUBE_AI_Process-STMicroelectronics.X-CUBE-AI.8.1.0-false-HAL-false
 RCC.ADC12Freq_Value=170000000
 RCC.AHBFreq_Value=170000000
 RCC.APB1Freq_Value=170000000
@@ -151,18 +154,20 @@ STMicroelectronics.X-CUBE-AI.8.1.0.ActivationBufferSizeList=4468
 STMicroelectronics.X-CUBE-AI.8.1.0.ActivationBuffers=pool0
 STMicroelectronics.X-CUBE-AI.8.1.0.ActivationNames=pool0
 STMicroelectronics.X-CUBE-AI.8.1.0.ActivationSizes=AI_NETWORK_DATA_ACTIVATION_1_SIZE
+STMicroelectronics.X-CUBE-AI.8.1.0.ApplicationCcDeviceJjApplication=ApplicationTemplate
 STMicroelectronics.X-CUBE-AI.8.1.0.ArtificialOoIntelligenceJjXAaCUBEAaAI_Checked=true
+STMicroelectronics.X-CUBE-AI.8.1.0.DeviceJjApplication_Checked=true
 STMicroelectronics.X-CUBE-AI.8.1.0.HeapSize=0x800
-STMicroelectronics.X-CUBE-AI.8.1.0.IPParameters=HeapSize,StackSize,ModelName-8494336db3d2d8299a67c7e99f5ccd4f6f5b3ad396bcaeb26f6673f28bc72ac8,ModelType-8494336db3d2d8299a67c7e99f5ccd4f6f5b3ad396bcaeb26f6673f28bc72ac8,ModelKind-8494336db3d2d8299a67c7e99f5ccd4f6f5b3ad396bcaeb26f6673f28bc72ac8,ModelCompression-8494336db3d2d8299a67c7e99f5ccd4f6f5b3ad396bcaeb26f6673f28bc72ac8,ModelHashList,ModelNameList,WorkingBufferStartAddrList,LatestDirectoryUsed-8494336db3d2d8299a67c7e99f5ccd4f6f5b3ad396bcaeb26f6673f28bc72ac8,ModelStructureFile-8494336db3d2d8299a67c7e99f5ccd4f6f5b3ad396bcaeb26f6673f28bc72ac8,ModelMacc-8494336db3d2d8299a67c7e99f5ccd4f6f5b3ad396bcaeb26f6673f28bc72ac8,ModelActualCompression-8494336db3d2d8299a67c7e99f5ccd4f6f5b3ad396bcaeb26f6673f28bc72ac8,ModelRamOccupation-8494336db3d2d8299a67c7e99f5ccd4f6f5b3ad396bcaeb26f6673f28bc72ac8,ModelFlashOccupation-8494336db3d2d8299a67c7e99f5ccd4f6f5b3ad396bcaeb26f6673f28bc72ac8,copyWeightToRam,useInputAllocation,useOutputAllocation,customLayerConfigEnabled,noOnnxIoTranspose,ActivationBuffers,ActivationSizes,ActivationNames,InternalRamActivationBufferMaxSize,ActivationBufferSizeList,MaximumNumberOfInputLayer,MaximumNumberOfOutputLayer,MaximumSizeOfInputLayer,MaximumSizeOfOutputLayer,ReadyForCodeGeneration,XAaCUBEAaAICcArtificialOoIntelligenceJjCore,copyWeightToRam-8494336db3d2d8299a67c7e99f5ccd4f6f5b3ad396bcaeb26f6673f28bc72ac8,useInputAllocation-8494336db3d2d8299a67c7e99f5ccd4f6f5b3ad396bcaeb26f6673f28bc72ac8,useOutputAllocation-8494336db3d2d8299a67c7e99f5ccd4f6f5b3ad396bcaeb26f6673f28bc72ac8,customLayerConfigEnabled-8494336db3d2d8299a67c7e99f5ccd4f6f5b3ad396bcaeb26f6673f28bc72ac8,noOnnxIoTranspose-8494336db3d2d8299a67c7e99f5ccd4f6f5b3ad396bcaeb26f6673f28bc72ac8
+STMicroelectronics.X-CUBE-AI.8.1.0.IPParameters=HeapSize,StackSize,ModelName-8494336db3d2d8299a67c7e99f5ccd4f6f5b3ad396bcaeb26f6673f28bc72ac8,ModelType-8494336db3d2d8299a67c7e99f5ccd4f6f5b3ad396bcaeb26f6673f28bc72ac8,ModelKind-8494336db3d2d8299a67c7e99f5ccd4f6f5b3ad396bcaeb26f6673f28bc72ac8,ModelCompression-8494336db3d2d8299a67c7e99f5ccd4f6f5b3ad396bcaeb26f6673f28bc72ac8,ModelHashList,ModelNameList,WorkingBufferStartAddrList,LatestDirectoryUsed-8494336db3d2d8299a67c7e99f5ccd4f6f5b3ad396bcaeb26f6673f28bc72ac8,ModelStructureFile-8494336db3d2d8299a67c7e99f5ccd4f6f5b3ad396bcaeb26f6673f28bc72ac8,ModelMacc-8494336db3d2d8299a67c7e99f5ccd4f6f5b3ad396bcaeb26f6673f28bc72ac8,ModelActualCompression-8494336db3d2d8299a67c7e99f5ccd4f6f5b3ad396bcaeb26f6673f28bc72ac8,ModelRamOccupation-8494336db3d2d8299a67c7e99f5ccd4f6f5b3ad396bcaeb26f6673f28bc72ac8,ModelFlashOccupation-8494336db3d2d8299a67c7e99f5ccd4f6f5b3ad396bcaeb26f6673f28bc72ac8,copyWeightToRam,useInputAllocation,useOutputAllocation,customLayerConfigEnabled,noOnnxIoTranspose,ActivationBuffers,InternalRamActivationBufferMaxSize,ActivationBufferSizeList,MaximumNumberOfInputLayer,MaximumNumberOfOutputLayer,MaximumSizeOfInputLayer,MaximumSizeOfOutputLayer,ReadyForCodeGeneration,copyWeightToRam-8494336db3d2d8299a67c7e99f5ccd4f6f5b3ad396bcaeb26f6673f28bc72ac8,useInputAllocation-8494336db3d2d8299a67c7e99f5ccd4f6f5b3ad396bcaeb26f6673f28bc72ac8,useOutputAllocation-8494336db3d2d8299a67c7e99f5ccd4f6f5b3ad396bcaeb26f6673f28bc72ac8,customLayerConfigEnabled-8494336db3d2d8299a67c7e99f5ccd4f6f5b3ad396bcaeb26f6673f28bc72ac8,noOnnxIoTranspose-8494336db3d2d8299a67c7e99f5ccd4f6f5b3ad396bcaeb26f6673f28bc72ac8,ActivationSizes,ActivationNames,XAaCUBEAaAICcArtificialOoIntelligenceJjCore,ApplicationCcDeviceJjApplication
 STMicroelectronics.X-CUBE-AI.8.1.0.InternalRamActivationBufferMaxSize=AI_NETWORK_DATA_ACTIVATIONS_SIZE
 STMicroelectronics.X-CUBE-AI.8.1.0.LatestDirectoryUsed-8494336db3d2d8299a67c7e99f5ccd4f6f5b3ad396bcaeb26f6673f28bc72ac8=E\:\\MyProjects\\GuardDog\\isaac\\IsaacGymEnvs\\isaacgymenvs
 STMicroelectronics.X-CUBE-AI.8.1.0.MaximumNumberOfInputLayer=1
 STMicroelectronics.X-CUBE-AI.8.1.0.MaximumNumberOfOutputLayer=3
 STMicroelectronics.X-CUBE-AI.8.1.0.MaximumSizeOfInputLayer=1
 STMicroelectronics.X-CUBE-AI.8.1.0.MaximumSizeOfOutputLayer=1,1,1
-STMicroelectronics.X-CUBE-AI.8.1.0.ModelActualCompression-8494336db3d2d8299a67c7e99f5ccd4f6f5b3ad396bcaeb26f6673f28bc72ac8=6.09
-STMicroelectronics.X-CUBE-AI.8.1.0.ModelCompression-8494336db3d2d8299a67c7e99f5ccd4f6f5b3ad396bcaeb26f6673f28bc72ac8=Medium
-STMicroelectronics.X-CUBE-AI.8.1.0.ModelFlashOccupation-8494336db3d2d8299a67c7e99f5ccd4f6f5b3ad396bcaeb26f6673f28bc72ac8=24786
+STMicroelectronics.X-CUBE-AI.8.1.0.ModelActualCompression-8494336db3d2d8299a67c7e99f5ccd4f6f5b3ad396bcaeb26f6673f28bc72ac8=3.53
+STMicroelectronics.X-CUBE-AI.8.1.0.ModelCompression-8494336db3d2d8299a67c7e99f5ccd4f6f5b3ad396bcaeb26f6673f28bc72ac8=Low
+STMicroelectronics.X-CUBE-AI.8.1.0.ModelFlashOccupation-8494336db3d2d8299a67c7e99f5ccd4f6f5b3ad396bcaeb26f6673f28bc72ac8=33938
 STMicroelectronics.X-CUBE-AI.8.1.0.ModelHashList=8494336db3d2d8299a67c7e99f5ccd4f6f5b3ad396bcaeb26f6673f28bc72ac8
 STMicroelectronics.X-CUBE-AI.8.1.0.ModelKind-8494336db3d2d8299a67c7e99f5ccd4f6f5b3ad396bcaeb26f6673f28bc72ac8=ONNX
 STMicroelectronics.X-CUBE-AI.8.1.0.ModelMacc-8494336db3d2d8299a67c7e99f5ccd4f6f5b3ad396bcaeb26f6673f28bc72ac8=19988
@@ -185,7 +190,9 @@ STMicroelectronics.X-CUBE-AI.8.1.0.useInputAllocation=true
 STMicroelectronics.X-CUBE-AI.8.1.0.useInputAllocation-8494336db3d2d8299a67c7e99f5ccd4f6f5b3ad396bcaeb26f6673f28bc72ac8=true
 STMicroelectronics.X-CUBE-AI.8.1.0.useOutputAllocation=true
 STMicroelectronics.X-CUBE-AI.8.1.0.useOutputAllocation-8494336db3d2d8299a67c7e99f5ccd4f6f5b3ad396bcaeb26f6673f28bc72ac8=true
-STMicroelectronics.X-CUBE-AI.8.1.0_SwParameter=XAaCUBEAaAICcArtificialOoIntelligenceJjCore\:true;
+STMicroelectronics.X-CUBE-AI.8.1.0_SwParameter=ApplicationCcDeviceJjApplication\:ApplicationTemplate;XAaCUBEAaAICcArtificialOoIntelligenceJjCore\:true;
+TIM2.IPParameters=Prescaler
+TIM2.Prescaler=170
 USART2.IPParameters=VirtualMode-Asynchronous,WordLength
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 USART2.WordLength=WORDLENGTH_8B
@@ -193,10 +200,14 @@ VP_CRC_VS_CRC.Mode=CRC_Activate
 VP_CRC_VS_CRC.Signal=CRC_VS_CRC
 VP_STMicroelectronics.X-CUBE-AI_VS_ArtificialOoIntelligenceJjXAaCUBEAaAI_8.1.0.Mode=ArtificialOoIntelligenceJjXAaCUBEAaAI
 VP_STMicroelectronics.X-CUBE-AI_VS_ArtificialOoIntelligenceJjXAaCUBEAaAI_8.1.0.Signal=STMicroelectronics.X-CUBE-AI_VS_ArtificialOoIntelligenceJjXAaCUBEAaAI_8.1.0
+VP_STMicroelectronics.X-CUBE-AI_VS_DeviceJjApplication_8.1.0.Mode=DeviceJjApplication
+VP_STMicroelectronics.X-CUBE-AI_VS_DeviceJjApplication_8.1.0.Signal=STMicroelectronics.X-CUBE-AI_VS_DeviceJjApplication_8.1.0
 VP_SYS_VS_DBSignals.Mode=DisableDeadBatterySignals
 VP_SYS_VS_DBSignals.Signal=SYS_VS_DBSignals
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 board=NUCLEO-G431KB
 boardIOC=true
 isbadioc=false
