--- a/stm32/MotorDrive/LegDay/LegDay.ioc
+++ b/stm32/MotorDrive/LegDay/LegDay.ioc
@@ -593,7 +593,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_CORDIC_Init-CORDIC-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true,8-MX_USART2_UART_Init-USART2-false-HAL-true,9-MX_MotorControl_Init-MotorControl-false-HAL-false,10-MX_CRC_Init-CRC-false-HAL-true,11-MX_TIM3_Init-TIM3-false-HAL-true,12-MX_X_CUBE_AI_Init-STMicroelectronics.X-CUBE-AI.8.1.0-false-HAL-false,13-MX_X_CUBE_AI_Process-STMicroelectronics.X-CUBE-AI.8.1.0-false-HAL-false
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_CORDIC_Init-CORDIC-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true,8-MX_USART2_UART_Init-USART2-false-HAL-true,9-MX_MotorControl_Init-MotorControl-false-HAL-false,10-MX_CRC_Init-CRC-false-HAL-true,11-MX_TIM3_Init-TIM3-false-HAL-true,12-MX_TIM5_Init-TIM5-false-HAL-true,13-MX_X_CUBE_AI_Init-STMicroelectronics.X-CUBE-AI.8.1.0-false-HAL-false,14-MX_X_CUBE_AI_Process-STMicroelectronics.X-CUBE-AI.8.1.0-false-HAL-false
 ProjectManager.iocOrigin=MotorControl
 RCC.ADC12CLockSelection=RCC_ADC12CLKSOURCE_PLL
 RCC.ADC12Freq_Value=42500000
@@ -673,7 +673,7 @@ STMicroelectronics.X-CUBE-AI.8.1.0.DeviceJjApplication_Checked=true
 STMicroelectronics.X-CUBE-AI.8.1.0.HeapSize=0x800
 STMicroelectronics.X-CUBE-AI.8.1.0.IPParameters=HeapSize,StackSize,ModelName-098abfad738e50c5799519d2550cbfd076d351c164bf65d74cd62cbe9e5408c5,ModelType-098abfad738e50c5799519d2550cbfd076d351c164bf65d74cd62cbe9e5408c5,ModelKind-098abfad738e50c5799519d2550cbfd076d351c164bf65d74cd62cbe9e5408c5,ModelCompression-098abfad738e50c5799519d2550cbfd076d351c164bf65d74cd62cbe9e5408c5,ModelHashList,ModelNameList,WorkingBufferStartAddrList,LatestDirectoryUsed-098abfad738e50c5799519d2550cbfd076d351c164bf65d74cd62cbe9e5408c5,ModelStructureFile-098abfad738e50c5799519d2550cbfd076d351c164bf65d74cd62cbe9e5408c5,ModelMacc-098abfad738e50c5799519d2550cbfd076d351c164bf65d74cd62cbe9e5408c5,ModelActualCompression-098abfad738e50c5799519d2550cbfd076d351c164bf65d74cd62cbe9e5408c5,ModelRamOccupation-098abfad738e50c5799519d2550cbfd076d351c164bf65d74cd62cbe9e5408c5,ModelFlashOccupation-098abfad738e50c5799519d2550cbfd076d351c164bf65d74cd62cbe9e5408c5,copyWeightToRam,useInputAllocation,useOutputAllocation,customLayerConfigEnabled,noOnnxIoTranspose,ActivationBuffers,ActivationSizes,ActivationNames,InternalRamActivationBufferMaxSize,ActivationBufferSizeList,MaximumNumberOfInputLayer,MaximumNumberOfOutputLayer,MaximumSizeOfInputLayer,MaximumSizeOfOutputLayer,ReadyForCodeGeneration,copyWeightToRam-098abfad738e50c5799519d2550cbfd076d351c164bf65d74cd62cbe9e5408c5,useInputAllocation-098abfad738e50c5799519d2550cbfd076d351c164bf65d74cd62cbe9e5408c5,useOutputAllocation-098abfad738e50c5799519d2550cbfd076d351c164bf65d74cd62cbe9e5408c5,customLayerConfigEnabled-098abfad738e50c5799519d2550cbfd076d351c164bf65d74cd62cbe9e5408c5,noOnnxIoTranspose-098abfad738e50c5799519d2550cbfd076d351c164bf65d74cd62cbe9e5408c5,XAaCUBEAaAICcArtificialOoIntelligenceJjCore,ApplicationCcDeviceJjApplication
 STMicroelectronics.X-CUBE-AI.8.1.0.InternalRamActivationBufferMaxSize=AI_NETWORK_DATA_ACTIVATIONS_SIZE
-STMicroelectronics.X-CUBE-AI.8.1.0.LatestDirectoryUsed-098abfad738e50c5799519d2550cbfd076d351c164bf65d74cd62cbe9e5408c5=E\:\\MyProjects\\GuardDog\\stm32
+STMicroelectronics.X-CUBE-AI.8.1.0.LatestDirectoryUsed-098abfad738e50c5799519d2550cbfd076d351c164bf65d74cd62cbe9e5408c5=E\:\\MyProjects\\GuardDog\\isaac\\IsaacGymEnvs\\isaacgymenvs
 STMicroelectronics.X-CUBE-AI.8.1.0.MaximumNumberOfInputLayer=1
 STMicroelectronics.X-CUBE-AI.8.1.0.MaximumNumberOfOutputLayer=3
 STMicroelectronics.X-CUBE-AI.8.1.0.MaximumSizeOfInputLayer=1
@@ -687,7 +687,7 @@ STMicroelectronics.X-CUBE-AI.8.1.0.ModelMacc-098abfad738e50c5799519d2550cbfd076d
 STMicroelectronics.X-CUBE-AI.8.1.0.ModelName-098abfad738e50c5799519d2550cbfd076d351c164bf65d74cd62cbe9e5408c5=network
 STMicroelectronics.X-CUBE-AI.8.1.0.ModelNameList=network
 STMicroelectronics.X-CUBE-AI.8.1.0.ModelRamOccupation-098abfad738e50c5799519d2550cbfd076d351c164bf65d74cd62cbe9e5408c5=5340
-STMicroelectronics.X-CUBE-AI.8.1.0.ModelStructureFile-098abfad738e50c5799519d2550cbfd076d351c164bf65d74cd62cbe9e5408c5=E\:\\MyProjects\\GuardDog\\stm32\\pendulum.onnx
+STMicroelectronics.X-CUBE-AI.8.1.0.ModelStructureFile-098abfad738e50c5799519d2550cbfd076d351c164bf65d74cd62cbe9e5408c5=E\:\\MyProjects\\GuardDog\\isaac\\IsaacGymEnvs\\isaacgymenvs\\pendulum.onnx
 STMicroelectronics.X-CUBE-AI.8.1.0.ModelType-098abfad738e50c5799519d2550cbfd076d351c164bf65d74cd62cbe9e5408c5=Saved model
 STMicroelectronics.X-CUBE-AI.8.1.0.ReadyForCodeGeneration=true
 STMicroelectronics.X-CUBE-AI.8.1.0.StackSize=0x800
